--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -11,7 +11,7 @@
 \usepackage{textcomp}
 \usepackage{parskip}
 \usepackage{setspace}
-\doublespacing
+\onehalfspacing
 \setlength{\parskip}{1em}
 
 \usepackage{graphicx}
@@ -79,7 +79,7 @@
 
 	\singlespacing
 	\tableofcontents{}
-	\doublespacing
+	\onehalfspacing
 
 	\newpage
 
@@ -93,9 +93,25 @@
 
 	A very important part of any game engine is the interface between developer and the inner workings. There are many scripting languages that can be chosen from and there are many important factors when selecting a language to use, the most important factors include: popularity, execution speed and learning curve. Lua is at the top of the pile when it comes to games. Other languages such as JavaScript and Python are extremely popular in other areas but are not anywhere near as often used in games as they are more difficult to bind.
 				
-	Embedded scripting languages need to have access to core elements of the game engine to allow for developers to create fully fledged games without having to touch the lower level. Having the core engine open source also allows game developers to extend the Lua interface as required and push the changes to the repository.
+	Embedded scripting languages need to have access to core elements of the game engine to allow for developers to create fully fledged games without having to touch the lower level. Having the core engine open source also allows game developers to extend the Lua interface as required and push the changes to the repository. As many features as possible should be included, such as resource management, camera management and physics, all should make the development process simpler for the end developer.
 
 	Over the course of this report the design, implementation and technologies involved will be discussed including library choice for the various aspects as required.
+
+	\section{Objectives}
+
+	Allow interaction with game objects from both C++ and the embedded high level scripting language. This will be extremely important for ensuring that the designed game engine will be highly functional and easy to use.
+
+	Have various entry points that should be synonymous with what other game engines have such as standard entry points like initialise, update and draw.
+
+	Ensure full expandability. This will be a major factor when it comes to designing and implementing the core engine as the engine will need to be as general purpose as possible and should be tweakable for any use case.
+
+	Improve performance beyond LOVE2D by using techniques such as moving more of the core processing to the C++ side.
+
+	A maintainable codebase is very important for expandability and will ensure a fluid development process through the project as well as into the future beyond the project.
+
+	Document the engine and scripting language API. Implementing a game in a short space of time is very difficult without documentation as developers without any intimate knowledge of the engine will still be required to fully utilise the various features of the engine.
+
+	Compete in a game jam to verify how effective the various aspects of the game engine are under high stress rapid development.
 	
 \newpage
 
@@ -139,7 +155,7 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:SyntaxSample1}, caption={Lua Syntax Sample 1}, firstline=63, lastline=80]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 	There are two types of \texttt{for} loop in Lua, one is a numeric \texttt{for} and is shown in listing~\ref{lst:SyntaxSample1}, the other is the generic \texttt{for} that uses an iterator and allows for the traversal of all values. The numeric \texttt{for} uses a very simple syntax and so is very easy to write, the first argument is the starting value of the iteration variable, the second is the end value and the third is the value to add with each loop.
 
@@ -149,7 +165,7 @@
 	
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:SyntaxSample2}, caption={Lua Syntax Sample 2 (taken from \cite{LuaMan})}, firstline=82, lastline=89]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 	Using this behaviour of logical operators allows for quickly and easily assigning variables using, for example, a configuration file.
 
@@ -157,41 +173,41 @@
 	
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:SyntaxSample3}, caption={Lua Syntax Sample 3}, firstline=134, lastline=135]{codeSamples/1.lua} 
-	\doublespacing
+	\onehalfspacing
 
 
 	With the introduction of Lua 5.2, the \texttt{bit32} library added support for bitwise operations and with Lua 5.3 came native support for bitwise operators. Behaviour is exactly the same as in any other language with support for them as is shown in listing~\ref{lst:bitwise1}.
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:bitwise1}, caption={Lua Bitwise Operations}, firstline=137, lastline=142]{codeSamples/1.lua} 
-	\doublespacing
+	\onehalfspacing
 
 	Lua has some syntactic sugar which helps to simplify what the Lua developer will have to interact with.
 	
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:SyntacticSugarSample1}, caption={Syntactic Sugar Sample 1}, firstline=1, lastline=8]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 	In listing~\ref{lst:SyntacticSugarSample1} we can see how to inline declare a table with a sub table that is also inline declared.
-	\doublespacing
+	\onehalfspacing
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:SyntacticSugarSample2}, caption={Syntactic Sugar Sample 2}, firstline=17, lastline=21]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 	We can see how to declare a member function using some syntactic sugar in listing~\ref{lst:SyntacticSugarSample2}. Which is equivalent to listing~\ref{lst:SyntacticSugarSample3}.
-	\doublespacing
+	\onehalfspacing
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:SyntacticSugarSample3}, caption={Syntactic Sugar Sample 3}, firstline=10, lastline=15]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 
 	There are also several ways to access entries within a table all of which can be mixed and matched based on the programmers preference.
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:SyntacticSugarSample4}, caption={Syntactic Sugar Sample 4}, firstline=23, lastline=25]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 
 	Lua's support for coercion allows for the automatic conversion of strings and numbers, this helps developers with rapid development as they would not need to have to think about converting types in many situations when Lua itself handles it for them. Bitwise operators always convert numbers to integers, mathematic operations always convert operands to floats ~\cite{LuaMan}.
@@ -202,7 +218,7 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:Coercion 1}, caption={Coercion Sample 1}, firstline=144, lastline=148]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 
 	Lua's tables have a length operator in the form of \texttt{\#}, it returns the length of a table as would be found by the \texttt{ipairs} operator. It counts through integers starting at 1 and stopping when the first nil value is found, this means that the operator is only useful for finding the length of array-like tables.
@@ -212,7 +228,7 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:Functions1}, caption={Functions Sample 1}, firstline=97, lastline=105]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 
 	Functions, in Lua, are first class values with proper lexical scoping~\cite{Ierusalimschy:2013:PLT:2502646}. A first class value in Lua means that a function is effectively the same as any other regular variable, this allows a Lua developer to pass functions into other functions as arguments, return functions, use functions of keys and values of tables and can be assigned to a variable. This is a very valuable trait for a high level scripting language to have as it allows for very interesting techniques such as functional programming, closures are fully supported in Lua as a result of this.
@@ -221,7 +237,7 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:Functions2}, caption={Functions Sample 2}, firstline=91, lastline=95]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 
 	Without proper tail calls, recursion could overflow the stack but with proper tail calls this is impossible and fits in perfectly with a high level scripting language such as Lua.
@@ -231,7 +247,7 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:TablesSample1}, caption={Tables in Lua Sample 1}, firstline=27, lastline=36]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 
 	Lua has a variety of built in functions for the use of manipulating and getting data from tables all available through the table library~\cite{LuaMan}.
@@ -240,7 +256,7 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:TablesSample2}, caption={Tables in Lua Sample 2}, firstline=38, lastline=61]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 
 	The \texttt{pairs} function iterates over all elements in a table while the \texttt{ipairs} function will return all key-value pairs where the keys are numbers, starting at the first index and stopping when it hits the first nil value.~\cite{Ierusalimschy:2013:PLT:2502646} 
@@ -254,14 +270,14 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:MetaTables1}, caption={Metatables Sample 1}, firstline=107, lastline=117]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 
 	These functions are called metamethods and allow for any interaction with a table to be altered. While classes do not exist in Lua, using a meta table and first class value functions, behaviour similar to object oriented programming can be achieved especially with the use of factory methods. An example of a class is shown in listing~\ref{lst:MetaTables2}. On line 13 a table with the metatable \texttt{Dog} is created and returned to \texttt{myDog}.
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:MetaTables2}, caption={Metatables Sample 2}, firstline=119, lastline=132]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 
 	While this concept is very useful, if the \texttt{new} function is ever changed by mistake, a difficult to locate bug could be created.
@@ -273,7 +289,7 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:Couroutine1}, caption={Couroutine Sample ~\cite{Ierusalimschy:2013:PLT:2502646}}, firstline=150, lastline=153]{codeSamples/1.lua} 
-	\doublespacing
+	\onehalfspacing
 
 
 \subsection{Garbage Collection}
@@ -284,7 +300,7 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:GC1}, caption={Manual Garbage Collector Sample}, firstline=155, lastline=165]{codeSamples/1.lua}
-	\doublespacing
+	\onehalfspacing
 
 	
 	Although the reference to the table is removed the table still exists in memory until the next pass of the garbage collector.
@@ -299,7 +315,7 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:CAPISample1}, caption={Sample function implementation in C API~\cite{Ierusalimschy:2013:PLT:2502646}}, firstline=1, lastline=12]{codeSamples/1.cpp}
-	\doublespacing
+	\onehalfspacing
 
 
 \newpage
@@ -416,7 +432,7 @@
 	%pseudo code of gamestate
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:pseudo1}, caption={Gamestate Pseudo Code}, firstline=0, lastline=15]{codeSamples/pseudocode.code}
-	\doublespacing
+	\onehalfspacing
 
 	An example definition of the gamestate class written in pseudo code is shown in listing~\ref{lst:pseudo1}. Using polymorphism all objects that need to think or be drawn can be stored in the points map and then every think all objects will think and every draw every object will draw. By overriding the think and draw functions different behaviour can be achieved for each sub class of point.
 
@@ -425,7 +441,7 @@
 	
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:pseudo2}, caption={Resource Manager Pseudo Code}, firstline=17, lastline=30]{codeSamples/pseudocode.code}
-	\doublespacing
+	\onehalfspacing
 
 	An example of a highly generic resource manager is shown in listing~\ref{lst:pseudo2} alongside an example of a resource wrapper class. It is highly generic as within the resources map there will be all types of resource. The exists function will return if a given resource is currently in the resources map. The load function will check that the map has the resource already and return it if so, otherwise, it will load from file and add to the map before returning the resource. The unload function reduces the use count of the resource by one and then checks if there are 0 uses, if there are the resource is removed from the map.
 
@@ -455,7 +471,7 @@
 
 	\singlespacing
 	\lstinputlisting[style=Lua, label={lst:pseudo3}, caption={Resource Manager Pseudo Code}, firstline=32, lastline=46]{codeSamples/pseudocode.code}
-	\doublespacing
+	\onehalfspacing
 
 
 	All components inherit from a base component which provides functionality for setting and getting the parent of the component and provides the name of the component as is set in the child constructor. This is shown in listing~\ref{lst:pseudo3} In addition to all game objects being composed of a variety of components there are systems required to handle these components. These systems know how the components must be used and must iterate over all components of it's given type in order to provide the engine with that components functionality.
@@ -466,10 +482,10 @@
 		\centering
 		\includegraphics[scale=0.75]{ecsmanager1}
 		\caption{Animatable System}
-		\label{fig:ECSmanager1}
+		\label{fig:ECSManager1}
 	\end{figure}
 
-	Handling the components will be done by a system per component all handled by an ECS manager as is shown in \ref{fig:ECSManager1}
+	Handling the components will be done by a system per component all handled by an ECS manager as is shown in figure~\ref{fig:ECSManager1}.
 
 	%how to run code
 	\section{Running}
@@ -493,7 +509,7 @@
     
     An important first step was to get Lua, SFML and Box2D building together within a single cpp project. Once the project was building correctly, the next step was to create some example classes and a simple main program loop to create a test bed for future work. Setting up a github repository as another important step, this is a big project, change control is extremely useful especially when the project is spread over many source files.
 
-    At each major stage in the development cycle testing the game engine on other platforms was ensured as a cross platform game engine is far more useful to a developer than one that is locked down to a specific platform.
+    At each major stage in the development cycle testing the game engine on other platforms was ensured as a cross platform game engine is far more useful to a developer than one that is locked down to a specific platform. Doing so should never take much effort as all code will be written using cross platform libraries using modern C++.
 
 %Created example class in C++ that works in SFML
 %Designed and created first classes of the entity system
@@ -510,11 +526,11 @@
 
 	Creating the resource manager proved to be challenging but ultimately very satisfying when it worked correctly. It allows for the end user of the game engine to not have to bother with resource management as the core engine will handle it, all resources are loaded from file for the first time but are otherwise reused by passing a smart pointer to the resource, when the resource is no longer in use anywhere it is unloaded from the resource manager.
 
-	The initial versions of the resource manager used raw pointers, this caused a few issues with leaving dangling pointers when trying to right modern code, to resolve this issue smart pointers were used. The shared pointer class from the C++ standard library was the perfect type of smart pointer for use in this case as the resources were being shared an additional time with each use. Shared pointers also allowed for getting the use count of itself as opposed to raw pointers which have no idea how many times they are being used.
+	The initial versions of the resource manager used raw pointers, this caused a few issues with leaving dangling pointers when trying to write modern code, to resolve this issue, smart pointers were used. The shared pointer class from the C++ standard library was the perfect type of smart pointer for use in this case as the resources were being shared an additional time with each use. Shared pointers also allowed for getting the use count of itself as opposed to raw pointers which have no idea how many times they are being used.
 	
 	\singlespacing
 	\lstinputlisting[style=C++, label={lst:implementation1}, caption={Resource Manager generic load function}, firstline=1, lastline=18]{codeSamples/implementation.cpp}
-	\doublespacing
+	\onehalfspacing
 
 	As shown in listing~\ref{lst:implementation1} C++ templating is used to ensure that the load function of the resource manager is capable of handling all types of resource. The first thing that the function does is check if the resource is already in the map, if it isn't, it then creates a smart pointer and loads the resource from file and inserts it into the resource map. The resource is then pulled from the map using the uri and returned to the caller. The usage is not incremented as the resource manager simply uses the count functionality of smart pointers instead of manually handling them.
 
@@ -526,7 +542,7 @@
 
 %setting and getting some information from the window
 
-   Interaction with the window through SFML allows for the user of the game engine to ensure that their game works on all resolutions. Adding this to the Lua API also provides control to the lower level systems that would otherwise be fully inaccessible. 
+   Interaction with the window through SFML allows for the user of the game engine to ensure that their game works on all resolutions. Getting the resolution of the window is currently added to the API but setting the size of the window is not. Adding this to the Lua API also provides control to the lower level systems that would otherwise be fully inaccessible from Lua. 
 
 %Added sound to C++ then to Lua
 
@@ -536,9 +552,17 @@
 %Created Animation class and created animatable
 %Got animation and animatable working in Lua
 
-    The animation system must be tightly integrated into the core of the engine to ensure that there will be excellent performance passed forward.
+    The animation system must be tightly integrated into the core of the engine to ensure that there will be excellent performance passed forward to the Lua API. By extending the drawable class some rendering code had to be duplicated in order for the correct behaviour to be possible.
 
-    The animation class handles all of frames, settings and timing for all animations within the game engine, having a class handling all of this allows for various systems and processes to use the same code. The UI system could use the animation class just the same as the animatable class could. Seamless integration with Lua was required as animations are an important part of any game, ensuring that this was achieved was very difficult.
+	The animation class handles all of frames, settings and timing for all animations within the game engine, having a class handling all of this allows for various systems and processes to use the same code. It also ensures that all animation code is easy to find and modify should the need arise. The UI system could use the animation class just the same as the animatable class could. Seamless integration with Lua was required as animations are an important part of any game, ensuring that this was achieved was very difficult.
+
+	In early versions of the animation system the sprite sheets were cut up into frames and stored in the resource manager separately from the animation class. Through stepwise refinement the system was changed to simply require integer rectangles of the frames, this simplified the system and reduced the reliance on the resource manager, the performance improved as a result.
+
+	\singlespacing
+	\lstinputlisting[style=Lua, label={lst:implementation2}, caption={Lua API Animation}, firstline=13, lastline=23]{codeSamples/implementation.lua}
+	\onehalfspacing
+
+	Integration with Lua was then finalised as is shown in listing~\ref{lst:implementation2}, this style fits with the Lua style and is very easy to learn and use effectively.
 
 %Added b2d
 %Created physics component and added it to Lua
@@ -546,35 +570,37 @@
 	Box2D was added to the engine and to the Lua API. Binding the fixture definitions and body definitions was an interesting challenge as it was difficult to decide what the best method of doing it was. It was clear that using a table with only the required parameters was the best option, as having to use a large selection of setter functions would have been painful for the end developer.
 
 	\singlespacing
-	\lstinputlisting[style=C++, label={lst:implementation2}, caption={Example of creating a box2d physics component}, firstline=1, lastline=11]{codeSamples/implementation.lua}
-	\doublespacing
+	\lstinputlisting[style=C++, label={lst:implementation2}, caption={Example of creating a Box2D physics component}, firstline=1, lastline=11]{codeSamples/implementation.lua}
+	\onehalfspacing
 
-
-	As shown in listing~\ref{lst:implementation2} the Lua required to create a physics component is very simple and can easily be modified to allow for any situation. Allowing for the deletion of the bodies proved to be reasonably difficult as just removing the instance of the physics component was not enough, the body also had to be removed from the physics world. 
+	As shown in listing~\ref{lst:implementation2} the Lua required to create a physics component is very simple and can easily be modified to allow for any situation. The keys in the definition tables are the same as the ones found in the Box2D documentation.
+	
+	Allowing for the deletion of the bodies proved to be reasonably difficult as just removing the instance of the physics component was not enough, the body also had to be removed from the physics world. 
 
 %Did some work on the gamestate system
 %Designed and created the camera system
 %View system now works in Lua
 
-    Management of what the players can see needs to be handled by the game engine to simplify the Lua code required to achieve the same thing, this can be accomplished by using the SFML view class and setting the render target on the drawable objects. This is easily exposed to Lua allowing the game developer to manage a complex feature. Using a single view as the camera to navigate the game world and a second view for the UI would be the perfect use case for this system.
+    Management of what the players can see needs to be handled by the game engine to simplify the Lua code required to achieve the same thing, this can be accomplished by using the SFML view class and setting the render target on the drawable objects. This is easily exposed to Lua allowing the game developer to manage a complex feature. Using a single view as the camera to navigate the game world and a second view for the UI would be the perfect use case for this system. As it stands the system is quite naive and can result in looping through the drawable components more than once, this should be improved upon in the future.
 
-%Created ECS design and started conversion to ECS	
-%Created animation system
-%Combined the drawable and animatable components into a single drawable component
-	
-	Before the core of the engine got too big it was required to convert to the ECS design from the standard hierarchy design. Conversion to an ECS based design proved to be quite straight forward as only the parts of the engine that directly interacted with the standard approach classes had to be changed.
-
-	The animation system was almost implemented as designed but a clear improvement was found in that the drawable and animatable components could be combined, doing so removed any duplicated code and simplified the process for the end developer as they no longer need to think about overlapping behaviour. The animatable and animation classes were then exposed, in full, to Lua.
-
-%Finished conversion to ECS and fixed in Lua
+%Created ECS design and started conversion to ECS
 %ECS manager
+	
+	Before the core of the engine got too big it was required to convert to the ECS design from the standard hierarchy design because the ECS style improves the expandability and makes the engine easier to use especially from the Lua API. Composition of entities could be left entirely down to the game developer rather than the engine developer. Conversion to an ECS based design proved to be quite straight forward as only the parts of the engine that directly interacted with the standard approach classes had to be changed.
 
 	Implementation of the ECS manager and the component systems was mostly a case of copying and modifying existing code before deleting the old classes, the Lua API did not need to change very much. Adding the add component functions was trivial. All references to the old system have now been removed and replaced with their ECS counterparts.
+
+%Created animation system
+%Combined the drawable and animatable components into a single drawable component
+
+	The animation system was almost implemented as designed but a clear improvement was found in that the drawable and animatable components could be combined, doing so removed any duplicated code and simplified the process for the end developer as they no longer need to think about overlapping behaviour. The animatable and animation classes were then exposed, in full, to Lua.
 
 %Command line args added
 %created snake, fall
 
-	In order for the engines features and performance to be showcased, a pair of examples were created with the intention of releasing them with the source code. First a simple example of snake was created to show examples of using key pressed hooks for user input, text rendering, resource management as well as the general style of coding in Lua. A second example, called fall, was also created to showcase the Box2D physics integration, performance and the camera system.
+	In order for the engines features and performance to be showcased, a pair of examples were created with the intention of releasing them with the source code. First a simple example of snake was created to show examples of using key pressed hooks for user input, text rendering, resource management as well as the general style of coding in Lua. A second example, called fall, was created to showcase the Box2D physics integration, performance and the camera system.
+
+	Some developers prefer to learn by example rather than by reading documentation so this option was provided.
 
 %Documentation
 
@@ -609,7 +635,7 @@
 
 	First is a Dutch first year computer science student called Roman. Overall very positive feedback across the board. They enjoyed using the engine and found it to be very easy to pick up and create with, they would also choose to use this engine if they had a game idea they would like to prototype.
 
-	Next is an English engineer graduate, called Henry, with no education or professional experience in programming for games or otherwise, they managed to produce a simple zombie survival game within a few hours of starting. They praised the ease of setting up the engine and liked the fact that the engine was very easy to use with little to no experience. A suggestion was made for improved support of different resolutions.
+	Next is an English engineer graduate, called Henry, with no education or professional experience in programming for games or otherwise, they managed to produce a simple zombie survival game within a few hours of starting. They praised the ease of setting up the engine and liked the fact that the engine was very easy to use with little to no experience. A suggestion was made for improved support of different resolutions, this could be achieved by abstracting the positions and sizes to be virtual ones that are fully unrelated to the size and shape of the window.
 
 	Finally a Dutch professional developer, called Jim, with years of experience developing in many technologies including scripting in Lua for various games. Produced an excellent showcase of the engine utilising many of the major features of the engine with no prompts other than the use of the examples and Lua binding source code. Given his experience with Lua in other settings he found it very easy to pick up and go given just the sample code provided with the engine. During his time developing in the game jam a few points were brought to my attention and the engine was quickly extended to cover his requirements.
 
@@ -623,10 +649,6 @@
 		\caption{Animatable System}
 		\label{fig:Game1}
 	\end{figure}
-
-	
-
-	
 
 %For a game engine to be a complete engine a wide variety of features are required especially when a high level scripting language is the only input for developers to use when creating a game.
 
@@ -675,5 +697,5 @@
 
 	\singlespacing
 	\printbibliography{}
-	\doublespacing
+	\onehalfspacing
 \end{document}
