--- a/Report/document.bib
+++ b/Report/document.bib
@@ -89,4 +89,11 @@
     title = {Box2D},
     howpublished = {\url{http://box2d.org/about/}},
 },
-
+@misc{SFGUI,
+    title = {SFGUI},
+    howpublished = {\url{https://github.com/TankOs/SFGUI}},
+},
+@misc{TGUI,
+    title = {TGUI},
+    howpublished = {\url{https://tgui.eu/}},
+},
